@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.117 2004/03/16 20:50:08 mroi Exp $
+ * $Id: xine.h.in,v 1.118 2004/04/05 20:01:27 hadess Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -1645,6 +1645,7 @@ typedef struct {
 #define XINE_MSG_LIBRARY_LOAD_ERROR	8  /* (library/decoder)  */
 #define XINE_MSG_ENCRYPTED_SOURCE	9  /* none               */
 #define XINE_MSG_SECURITY		10 /* (security message) */
+#define XINE_MSG_AUDIO_OUT_UNAVAILABLE	11 /* none               */
 
 /* opaque xine_event_queue_t */
 typedef struct xine_event_queue_s xine_event_queue_t;
